# gpu-portfolio-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
k8s/: bench-job.yaml  dashboard-deployment.yaml
notebooks/: 01_demo.ipynb  02_colab_gpu_sweep.ipynb
results/: benchmark_sweep.csv  train_losses.csv
slurm/: array_sweep.sh  submit_sweep.sh
src/bench/: run_sweep.py
src/dashboard/: app.py
src/data/: fetch.py  fetch_rapids.py
src/models/: forecast_optimizer.py  forecaster.py  portfolio_cuopt.py  portfolio_opt.py  var_cpu.py  var_cuda_kernel.py  var_gpu.py
tests/: test_forecast_optimizer.py  test_forecaster.py  test_portfolio_opt.py  test_var.py
