[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gpu-portfolio-bench"
version = "0.1.0"
description = "GPU-accelerated Monte Carlo portfolio risk engine and benchmark suite"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "yfinance>=0.2.36",
    "pyarrow>=15.0.0",
    "scipy>=1.13.0",
    "cvxpy>=1.4.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pynvml>=11.5.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cupy = ["cupy-cuda12x>=13.0.0"]
dev = ["pytest>=8.2.0", "ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
